    o #316556 by darrenoh and JirkaRybka: More 1.x upgrade fixes.
    o #382398 by elcuco: Force LTR in the views admin.
    o #461144: Fix trimming to correctly remove tags when they are trimmed in half.
    o #330956: Theme: Information only scanned information from the default theme.
    o SA-CONTRIB-2009-037: Filter checkboxes could be displayed unfiltered allowing XSS attacks.

  New Features:
    o #293841: Allow different back ends for Views to facilite things like flickr api, solr, rdf, etc.
    o #458140: Allow any handler to expose widgets.
    o #325607 by bangpound: Automatically sort exports from bulk export.
    o #298616: Add argument for node updated time similar to node created time.
    o #323049 by yched: Allow Empty/Not Empty on select many to one.
    o #340701 by swentel: Restore allowing Views to set block caching mode.
    o #347892 by dww: Allow <any> option in Boolean filters.
    o #358314 by brmassa: Catch the exposed filter form so it doesn't process twice on a single view.
    o #154865 by Zack Rosen, josh_k and KarenS: Allow user contact form as a field.
    o #411880 by fgm: Add "options callback" to items using in_operator handler.
    o #360657 by yhahn: new hook_views_default_views_alter().
    o #430068 by dereine: New global counter field for displaying row number.
    o #420340 by derine: Translate node type filter.
    o #325796 by yang_yi_cn: Translate node type argument.
    o #441520 by jonathan1055: Allow the "time ago" date format to work on future dates as well.
    o #446726 by yhahn: Improved performance for js dependencies.
    o #437760 by leeneman: Remove duplicate terms from taxonomy term argument title.
    o #354270 by dereine: Allow "tag" to be added to the theme template suggestions.
    o #408180 by joachim: Allow taxonomy term parent argument.
    o #424460 by thePanz: Customizable breadcrumb title for arguments.
    o #436398 by Pasqualle: Support for aggregator category table.